--- a/style-life-hobbies.css
+++ b/style-life-hobbies.css
@@ -117,7 +117,7 @@ main{ padding-top: 64px; }
 
   background:
     linear-gradient(to bottom, rgba(0,0,0,.30) 0%, rgba(0,0,0,.65) 55%, rgba(0,0,0,.86) 100%),
-    url("BP.png") center/cover no-repeat;
+    url("lifeback.png") center/cover no-repeat;
 
   border-bottom:1px solid rgba(255,255,255,.10);
 }
